--- a/src/assets/style/components/description-product.css
+++ b/src/assets/style/components/description-product.css
@@ -5,6 +5,13 @@
     margin: 0;
 }
 
+/* Tablet Layout */
+@media only screen and (min-width: 600px) and (max-width: 991px) {
+  .description-content {
+    height: 75px;
+    overflow: auto;
+}
+}
 /* Desktop Layout */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .description-content {
