--- a/src/assets/style/components/skeleton-product.css
+++ b/src/assets/style/components/skeleton-product.css
@@ -90,6 +90,7 @@
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
+    margin-top: 100px;
     margin-bottom: 20px;
   }
   .image-loading {
